# pytorch-tiny-imagenet

./: .gitignore  AlexNet.ipynb  AlexNet.py  Final_Test.ipynb  Makefile  README.md  ResNet18.ipynb  ResNet18_224.ipynb  ResNet18_64.ipynb  ResNet18_64_Normalize_Flip.ipynb  ResNet18_FineTune.ipynb  Untitled.ipynb  kkk.ipynb  prepare_dataset.py  pyproject.toml  requirements.txt  resize.py  run.sh  test_model.py  train_it.py  train_model.py  val_format.py
notebook/: AlexNet.ipynb  ResNet18_224.ipynb  ResNet18_64.ipynb  ResNet18_FineTune.ipynb
src/: train_model.py
src/model/: AlexNet.py
