[tool.ruff]
line-length = 119

[project]
name = "pytorch-tiny-imagenet"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Taejun Moon", email = "tjmoon0104@outlook.com"},
]
dependencies = [
    "opencv-python>=4.8.1.78,<5.0.0",
    "torch>=2.8.0,<3.0.0",
    "torchvision>=0.16.1,<1.0.0",
    "livelossplot>=0.5.5,<1.0.0",
    "ruff>=0.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "tqdm>=4.66.1,<5.0.0",
    "notebook>=7.4.5,<8.0.0",
]
